Fixed styles for timer button and overflow bug in project header while editting

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -254,7 +254,7 @@
   margin: 0;
   padding: 5px 15px;
   height: 25px;
-  widows: 64px;
+  width: 64px;
 }
 #extension-standups .standups-timer .standups-timer-widget {
   height: 65px;
@@ -323,7 +323,7 @@
   margin-top: 10px;
 }
 #extension-standups .standups-project .standups-header {
-  overflow: auto;
+  overflow: hidden;
   margin-top: 10px;
   padding: 5px;
   text-align: left;
