--- a/src/less/project.less
+++ b/src/less/project.less
@@ -3,7 +3,7 @@
   margin-top: 10px;
 
   .standups-header {
-    overflow: auto;
+    overflow: hidden;
     margin-top: 10px;
     padding: 5px;
     text-align: left;
